# plugin-todo

./: .gitignore  CLAUDE.MD  README.md  package.json  tsconfig.json  tsup.config.ts
cypress/e2e/: simple-api-test.cy.ts  simple-test.cy.ts
cypress/support/: commands.ts  component.ts  e2e.ts
prompts/: actions.json  extract_cancellation.txt  extract_completion.txt  extract_confirmation.txt  extract_task_selection.txt  extract_task_update.txt  extract_todo.txt  providers.json
prompts/scripts/: generate-specs.js
python/: README.md  pyproject.toml
python/elizaos_plugin_todo/: __init__.py  cache_manager.py  client.py  config.py  data_service.py  elizaos_compat.py  errors.py  integration_bridge.py  notification_manager.py  plugin.py  reminder_service.py  types.py
python/elizaos_plugin_todo/actions/: __init__.py  cancel_todo.py  complete_todo.py  confirm_todo.py  create_todo.py  update_todo.py
python/elizaos_plugin_todo/providers/: __init__.py  todos.py
python/tests/: conftest.py  test_actions.py  test_integration.py  test_providers.py
rust/: Cargo.toml  README.md
rust/src/: cache_manager.rs  client.rs  config.rs  data_service.rs  error.rs  integration_bridge.rs  lib.rs  notification_manager.rs  reminder_service.rs  types.rs  wasm.rs
rust/src/actions/: cancel_todo.rs  complete_todo.rs  confirm_todo.rs  create_todo.rs  mod.rs  update_todo.rs
rust/src/providers/: mod.rs  todos.rs
rust/tests/: integration_tests.rs
scripts/: test-e2e-ci.js  test-e2e.js  test-without-tsc.js
src/: apis.ts  index.ts  schema.ts  tests.ts
src/__tests__/e2e/: todo-plugin.ts
src/actions/: cancelTodo.ts  completeTodo.ts  createTodo.ts  updateTodo.ts
src/fixes/: TypeScript_Errors_Tutorial.md
src/frontend/: index.tsx
src/providers/: todos.ts
src/services/: cacheManager.ts  integrationBridge.ts  notificationManager.ts  reminderService.ts  todoDataService.ts
src/tests/: createTodoAction.test.ts  dist-schema.test.ts  index.test.ts  plugin-init.test.ts  reminder-rolodex.test.ts  reminderService.test.ts  schema.test.ts  todoDataService.test.ts  todosProvider.test.ts
typescript/: README.md  apis.ts  build.ts  index.browser.ts  index.node.ts  index.ts  package.json  schema.ts  tests.ts  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.typecheck.json  types.ts  vitest.config.ts
typescript/__tests__/e2e/: reminder-delivery.ts  todo-plugin.ts
typescript/__tests__/unit/: actions.test.ts  cacheManager.test.ts  providers.test.ts  todoDataService.test.ts
typescript/actions/: cancelTodo.ts  completeTodo.ts  confirmTodo.ts  createTodo.ts  updateTodo.ts
typescript/providers/: todos.ts
typescript/services/: cacheManager.ts  integrationBridge.ts  notificationManager.ts  reminderService.ts  todoDataService.ts
typescript/types/: index.ts
