[package]
name = "elizaos-plugin-todo"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "elizaOS Todo Plugin - Task management with daily recurring and one-off tasks"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
keywords = ["ai", "agent", "todo", "task-management", "elizaos"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["tokio/full"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js"]

[dependencies]
# Core runtime types (for native plugin integration)
elizaos = { version = "2.0.0", path = "../../../packages/rust", default-features = false, features = ["native"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# UUID handling
uuid = { version = "1.19", features = ["v4", "serde"] }

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Native-only dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.0"
dotenvy = "0.15"

[profile.release]
lto = true
opt-level = "z"







